--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend1",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/ws": "^8.5.10",
-    "chess.js": "^1.0.0-beta.8",
-    "typescript": "^5.4.5",
-    "ws": "^8.17.0"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
