--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.4",
+    "tsc-watch": "^6.2.0",
     "turbo": "^2.0.5",
     "typescript": "^5.4.5"
   },
@@ -19,5 +23,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "axios": "^1.7.2"
+  }
 }
