ui fix, confetti added at win

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "packages/*"
   ],
   "dependencies": {
+    "react-confetti": "^6.1.0",
+    "react-use": "^17.5.1",
     "use-sound": "^4.0.3"
   }
 }
