--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
     "@prisma/client": "^5.16.2",
-    "next": "14.2.5",
+    "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
+    "react-chess-pieces": "^1.1.2",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
   },
